--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-minify-css": "1.0.0",
     "gulp-plumber": "1.0.0",
