--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "surge": "0.17.1"
   },
   "devDependencies": {
+    "browser-sync": "^2.14.3",
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.2",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-minify-css": "1.0.0",
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-surge": "^0.1.0"
   }
 }
