--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "^2.3.2",
-    "gulp-surge": "^0.1.0"
+    "gulp-surge": "^0.1.0",
+    "nucleus-styleguide": "^1.0.7"
   }
 }
