--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
   },
   "devDependencies": {
     "browser-sync": "^2.14.3",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-cache": "^0.4.5",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-jshint": "^2.0.2",
     "gulp-minify-css": "1.0.0",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-surge": "^0.1.0",
+    "gulp-uglify": "^2.0.0",
     "nucleus-styleguide": "^1.0.7"
   }
 }
